--- a/css/bubble.css
+++ b/css/bubble.css
@@ -17,17 +17,17 @@ html,body {
     position:absolute;
     top:4px;
     left:4px;
-    background:rgba(66 ,133,245,0.5);
-    border-radius: 50%;
+    /*background: rgba(114, 250, 46, 0.5);*/
+    /*border-radius: 50%;*/
     transition: all 0.5s;
     margin:0px;
-    border:2px solid rgba(211, 84, 0,1.0);
+    /*border:2px solid rgba(211, 84, 0,1.0);*/
 }
 
 #mainContent {
     color:white;
-    top:36.5%;
-    left:24.5%;
+    top:5.5%;
+    left:5.5%;
     position:absolute;
     padding:0px;
     margin:0px;
@@ -48,11 +48,11 @@ button:hover {
 }
 
 .drag-element {
-    width:25px;
-    height:20px;
+    width:45px;
+    height:45px;
     position: absolute;
     top: 1px;
-    left: 4px;
+    left: 1px;
     cursor:hand;
 }
 
@@ -71,10 +71,27 @@ button:hover {
 
 /* --------------------------------------------- CONV NUMBER PART --------------------------------------------- */
 
-.conv-number {
-	text-align: center;
-    position:absolute;
-    left:36%;
-    cursor: normal;
-    display:none;
+.badge {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;  /* 数值与height相同，使数字垂直居中*/
+    text-align: center;  /*使数字水平居中*/
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 50%; /*使正方形发变圆形，矩形变椭圆形*/
+    position: relative;
+    top: 2px;
+    left: 40px;
+}
+
+img {
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+}
+
+img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
