--- a/css/bubble.css
+++ b/css/bubble.css
@@ -72,6 +72,7 @@ button:hover {
 /* --------------------------------------------- CONV NUMBER PART --------------------------------------------- */
 
 .badge {
+    display:none;
     width: 20px;
     height: 20px;
     line-height: 20px;  /* 数值与height相同，使数字垂直居中*/
