--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
     top: 40%;
     transform-origin: 0px 40px;
     animation: loader-small-circles-animation 2.5s ease infinite;
-    background: #007CFF;
+    background: linear-gradient(#8F92FE, #4389FB);
 }
 
 .loader-small-circles:nth-child(1) {
@@ -68,7 +68,7 @@ body {
 .titleBar {
     width: calc(100% - 6px);
     height: 35px;
-    background: rgb(0, 132, 255);
+    background: linear-gradient(#8F92FE, #4389FB);
     border: 3px solid rgb(0, 132, 255);
     margin: 0px;
     padding: 0px;
