--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,7 @@ button {
     right: 0;
     bottom: 0;
     left: 0;
+    padding-top: 8%;
     background: rgba(0, 0, 0, 0.8);
     opacity: 0;
     transition: opacity 400ms ease-in;
