--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,6 @@ button {
 
 .modal > div {
     max-width: 400px;
-    height: 400px;
     position: relative;
     margin: 1% auto;
     border-radius: 5px;
@@ -402,11 +401,11 @@ button {
     z-index: 1;
     background: #FFFFFF;
     max-width: 360px;
-    padding: 8px;
+    padding: 4px;
     alignment: center;
 }
 
-.form div {
+.form .input_outer {
     font-family: "Roboto", sans-serif;
     outline: 0;
     width: 100%;
@@ -418,61 +417,104 @@ button {
     position: relative;
 }
 
-.form div:hover,
-.form div:active,
-.form div:focus {
+.form .input_outer:hover,
+.form .input_outer:active,
+.form .input_outer:focus {
     border: 1px solid #07BDFE;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-.form div input{
+.form .input_outer input {
     width: 280px;
     height: 36px;
     outline: none;
     display: inline-block;
-    font: 14px "microsoft yahei",Helvetica,Tahoma,Arial,"Microsoft jhengHei";
+    font: 14px "microsoft yahei", Helvetica, Tahoma, Arial, "Microsoft jhengHei";
     margin-left: 50px;
     border: transparent;
     background: none;
     line-height: 46px;
-    -webkit-text-fill-color: #010101;/*输入文字、placeholder颜色*/
-    caret-color:#010101;
+    -webkit-text-fill-color: #010101; /*输入文字、placeholder颜色*/
+    caret-color: #010101;
 }
 
-.u_ctl{
+.u_ctl {
     width: 25px;
     height: 25px;
     background: url(../images/login_ico.png);
-    background-position:  -85px -74px;
+    background-position: -85px -74px;
     position: absolute;
     margin: 7px 13px;
 }
 
-.u_user{
+.u_user {
     width: 25px;
     height: 25px;
     background: url(../images/login_ico.png);
-    background-position:  -125px 0;
+    background-position: -125px 0;
     position: absolute;
     margin: 7px 13px;
 }
 
-.u_mail{
+.u_mail {
     width: 25px;
     height: 25px;
     background: url(../images/login_ico.png);
-    background-position:  -85px 0;
+    background-position: -85px 0;
     position: absolute;
     margin: 7px 13px;
 }
 
-.u_nick{
+.u_nick {
     width: 25px;
     height: 25px;
     background: url(../images/login_ico.png);
-    background-position:  -85px -155px;
+    background-position: -85px -155px;
     position: absolute;
     margin: 7px 13px;
+}
+
+input[type=checkbox]:focus {
+    outline: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+input[type=checkbox] {
+    background-color: #DDD;
+    border-radius: 2px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 17px;
+    height: 17px;
+    cursor: pointer;
+    position: relative;
+    top: 6px;
+}
+
+input[type=checkbox]:checked {
+    background-color: #07BDFE;
+    background: #07BDFE url("data:image/gif;base64,R0lGODlhCwAKAIABAP////3cnSH5BAEKAAEALAAAAAALAAoAAAIUjH+AC73WHIsw0UCjglraO20PNhYAOw==") 3px 3px no-repeat;
+}
+
+.form input[type=checkbox]:hover,
+.form input[type=checkbox]:active,
+.form input[type=checkbox]:focus {
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form .input_label {
+    outline: 0;
+    margin: 0 0 15px;
+    box-sizing: border-box;
+    font: 14px "microsoft yahei", Helvetica, Tahoma, Arial, "Microsoft jhengHei";
+    position: relative;
+}
+
+.form .checkbox_outer {
+    width: 100%;
+    margin: 0 0 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+    position: relative;
 }
 
 .wrong-credentials {
@@ -494,7 +536,7 @@ button {
     color: #FFFFFF;
     transition: all 0.5s ease;
     cursor: pointer;
-    margin: 0 0 15px;
+    margin: 5px 0 0px;
 }
 
 .form button:hover,
@@ -559,12 +601,12 @@ button {
     color: #EF3B3A;
 }
 
-.form label {
+.form .title_label {
     font-family: "Robot", sans-serif;
     font-size: 1.25em;
     display: inline-block;
     width: 100%;
-    margin: 0 0 15px;
+    margin: 0 0 10px;
     padding: 8px;
     color: #010101;
     text-align: center;
